# Machinate

./: .gitignore  Brewfile  LICENSE  README.md  pyproject.toml
docs/: beginner-guide.md  homebrew-release.md
examples/recipe-gallery-workspace/: README.md
examples/recipe-gallery-workspace/.machinator/: workspace.json
examples/recipe-gallery-workspace/.machinator/pipelines/: fashion-binary-cnn.json  fashion-binary-resnet.json  penguins-deep-mlp.json  sms-spam-transformer.json  titanic-vanilla-mlp.json
examples/recipe-gallery-workspace/pipelines/fashion-binary-cnn/: README.md  machinate.toml  model.toml
examples/recipe-gallery-workspace/pipelines/fashion-binary-resnet/: README.md  dataset_facts.toml  machinate.toml  model.toml  training.toml
examples/recipe-gallery-workspace/pipelines/penguins-deep-mlp/: README.md  dataset_facts.toml  machinate.toml  model.toml  training.toml
packaging/homebrew/: machinator.rb
rust/machinate-ir/: Cargo.toml
rust/machinate-ir/src/: lib.rs  main.rs
rust/machinator-ir/: Cargo.toml
rust/machinator-ir/src/: lib.rs  main.rs
scripts/: build_recipe_gallery.py  build_release_artifact.sh  render_homebrew_formula.py
src/machinate/: __main__.py  cli.py  core.py  modeling.py  ui.py
src/machinate/commands/: collate.py  doctor.py  grab.py  guide.py  legate.py  model.py  new.py  run.py  task.py  workspace.py
src/machinate/guides/: beginner-guide.md
src/machinate/js/: fetch_url.mjs
src/machinator/: __main__.py  cli.py  core.py  modeling.py  modeling_collation.py  modeling_compile.py  modeling_rust.py  modeling_specs.py  modeling_types.py  modeling_weights.py  pipeline_refs.py  pipeline_tasks.py
src/machinator/commands/: build.py  check.py  collate.py  doctor.py  grab.py  guide.py  init.py  legate.py  model.py  new.py  run.py  task.py  test.py  workspace.py
src/machinator/guides/: beginner-guide.md
src/machinator/js/: fetch_url.mjs
tests/: __init__.py  test_cli.py
tests/integration/: __init__.py  test_dataset_first_flow.py
tests/unit/: __init__.py  test_cli.py
(+39 files in other folders)
