[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machinate"
version = "0.3.0"
description = "Prompt-first control-plane CLI for ML workspaces and pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "questionary>=2.1,<3",
]
license = { text = "MIT" }
authors = [
  { name = "Johnny" }
]
keywords = ["cli", "mlops", "pipelines", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.scripts]
macht = "machinate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
machinate = ["js/*.mjs", "guides/*.md"]

[tool.setuptools.packages.find]
where = ["src"]
